# 586-frontend

./: Cargo.toml  README.md
src/: authservice.rs  domain.rs  lib.rs  locservice.rs  main.rs  model.rs  msg.rs  render.rs  views.rs
static/: auth.js  env.js  index.html
templates/: assign_task.html  null.html  project_details.html  projects.html  task_details.html  users.html  worker_details.html  workers.html
tools/: deploy-to-s3
