[package]
name = "frontend"
version = "0.1.0"
authors = ["Brian McClelland"]
edition = "2018"

[dependencies]
yew = "0.9.2"
http = "0.1.19"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
erased-serde = { version = "0.3.9" }
failure = "0.1.6"
stdweb = "0.4.20"
askama = "0.8.0"
